@@ -7,6 +7,7 @@
 - added support for Python scripts in the `pypelines` folder
 - added `PYPELINE(name, [options])` method starts a python process
 - added support for custom View engine helpers `DEF.helpers.myhelper`
+- fixed killing workers and pypelines
 
 ========================
 0.0.12
